# casualops

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  dd.txt  dd1.txt  inference.py  models.py  obs.json  openenv.yaml  pyproject.toml  server.py  start.bat
backend/: config.py  main.py  requirements.txt
backend/services/: audio_analysis.py  compliance_intent.py  groq_llm.py  orchestrator.py  sarvam.py
causality/: __init__.py  graph.py  traps.py
env/: __init__.py  environment.py
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: backend.ts
frontend/src/components/: AudioPlayer.tsx  ChatMessage.tsx  LanguageBadge.tsx  ProcessGuide.tsx  ProductCard.tsx  RecordButton.tsx  SummaryCard.tsx
frontend/src/data/: processes.json  products.json
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/styles/: index.css
graders/: __init__.py  reward.py  score.py
server/: app.py
tasks/: __init__.py  base.py  task_easy.py  task_extreme.py  task_hard.py  task_medium.py
