[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal_ops"
version = "0.1.0"
description = "CausalOps — The Causal Inference Gym for Production Systems"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "openai>=1.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
include = ["causality*", "env*", "graders*", "models*", "tasks*", "server*"]
